the unicorn is back baby

--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -1,7 +1,7 @@
 accelerator:
   displayName: unicorn-accelerator
   description: The best accelerator ever
-  iconUrl: https://github.com/sample-accelerators/icons/raw/master/icon-boot.png
+  iconUrl: https://i.pinimg.com/564x/e5/46/bc/e546bcc0b0c20597af11a3d55f8a7371.jpg
   tags: 
   - unicorn
   options:
