--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -1,9 +1,9 @@
 accelerator:
-  displayName: unicorn-accelerator
-  description: The most unicorn accelerator ever
-  iconUrl: https://seeklogo.com/images/M/magical-unicorn-logo-1AFC539E3B-seeklogo.com.png
+  displayName: hulk-accelerator
+  description: The SMASHINGIST accelerator ever
+  iconUrl: https://seeklogo.com/images/H/hulk-logo-35A8442B60-seeklogo.com.png
   tags: 
-  - unicorn
+  - hulk
   options:
   - name: optionName
     label: Nice Label
