--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -1,12 +1,12 @@
 accelerator:
-  displayName: hulk-accelerator
-  description: The SMASHINGIST accelerator ever
-  iconUrl: https://seeklogo.com/images/H/hulk-logo-35A8442B60-seeklogo.com.png
+  displayName: unicorn-accelerator
+  description: The FLUFFIEST accelerator ever
+  iconUrl: https://seeklogo.com/images/M/magical-unicorn-logo-1AFC539E3B-seeklogo.com.png
   tags: 
-  - hulk
+  - unicorn
   options:
   - name: optionName
-    label: Nice Label
+    label: Fluffy Label
     display: true
     defaultValue: ""
 engine:
